--- a/Flutter/whatz_up/pubspec.yaml
+++ b/Flutter/whatz_up/pubspec.yaml
@@ -30,6 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.3.1
+  go_router: ^10.1.2
+  logger: ^2.0.2
+  url_strategy: ^0.2.0
+  chat_bubbles: ^1.5.0
+  audioplayers: ^5.2.1
+  cached_network_image: ^3.3.0
+  story_view: ^0.15.0
 
 
   # The following adds the Cupertino Icons font to your application.
