--- a/Flutter/whatz_up/pubspec.yaml
+++ b/Flutter/whatz_up/pubspec.yaml
@@ -1,5 +1,5 @@
 name: whatz_up
-description: A new Flutter project.
+description: A Flutter clone of WhatsApp from Meta.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -30,14 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_native_splash: ^2.3.1
+  flutter_native_splash: ^2.2.16
   go_router: ^10.1.2
   logger: ^2.0.2
   url_strategy: ^0.2.0
   chat_bubbles: ^1.5.0
   audioplayers: ^5.2.1
   cached_network_image: ^3.3.0
-  story_view: ^0.15.0
+  story_view: ^0.13.1
+  whatsapp_story_editor: ^0.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,6 +46,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.11.0
   flutter_test:
     sdk: flutter
 
@@ -70,6 +72,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
