--- a/Flutter/whatz_up/android/app/src/main/AndroidManifest.xml
+++ b/Flutter/whatz_up/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
         android:requestLegacyExternalStorage="true"
         android:label="WhatzUp"
         android:name="${applicationName}"
-        android:icon="@mipmap/launcher_icon">
+        android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
             android:exported="true"
