--- a/Flutter/whatz_up/pubspec.yaml
+++ b/Flutter/whatz_up/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.2.16
   go_router: ^10.1.2
+  http: ^0.13.6
   logger: ^2.0.2
   url_strategy: ^0.2.0
   chat_bubbles: ^1.5.0
@@ -39,11 +40,6 @@ dependencies:
   cached_network_image: ^3.3.0
   story_view: ^0.13.1
   whatsapp_story_editor: ^0.0.6
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
