--- a/Flutter/whatz_up/flutter_native_splash.yaml
+++ b/Flutter/whatz_up/flutter_native_splash.yaml
@@ -3,7 +3,7 @@ flutter_native_splash:
   color: "#051B23"
   #background_image: "assets/image.png"
 
-  image: assets/logos/logo_1024.png
+  image: assets/logos/logo.png
 
   # Customize the parameters and run: dart run flutter_native_splash:create
   # To restore Flutter's default white splash screen run: dart run flutter_native_splash:remove
