--- a/Flutter/whatz_up/pubspec.yaml
+++ b/Flutter/whatz_up/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cached_network_image: ^3.3.0
   story_view: ^0.13.1
   whatsapp_story_editor: ^0.0.6
+  flutter_map: ^4.0.0
+  latlong2: ^0.8.2
 
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
