--- a/Flutter/whatz_up/pubspec.yaml
+++ b/Flutter/whatz_up/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_map_location_marker: ^6.0.0
   firebase_core: ^2.24.2
   cloud_functions: ^4.5.8
+  hive: ^2.2.3
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
   flutter_test:
