--- a/Flutter/whatz_up/pubspec.yaml
+++ b/Flutter/whatz_up/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_core: ^2.24.2
   cloud_functions: ^4.5.8
   hive: ^2.2.3
+  flutter_locales: ^3.0.1
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
   flutter_test:
