--- a/Flutter/whatz_up/pubspec.yaml
+++ b/Flutter/whatz_up/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cloud_functions: ^4.5.8
   hive: ^2.2.3
   flutter_locales: ^3.0.1
+  hive_flutter: ^1.1.0
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
   flutter_test:
