--- a/Flutter/whatz_up/pubspec.yaml
+++ b/Flutter/whatz_up/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   hive: ^2.2.3
   flutter_locales: ^3.0.1
   hive_flutter: ^1.1.0
+  shake_gesture: ^0.1.3
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
   flutter_test:
