--- a/Flutter/whatz_up/pubspec.yaml
+++ b/Flutter/whatz_up/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_locales: ^3.0.1
   hive_flutter: ^1.1.0
   shake_gesture: ^0.1.3
+  image_picker: ^0.8.9
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
   flutter_test:
@@ -79,6 +80,7 @@ flutter:
   assets:
     - assets/logos/
     - assets/locales/
+    - assets/media/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
