--- a/Flutter/whatz_up/pubspec.yaml
+++ b/Flutter/whatz_up/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   hive_flutter: ^1.1.0
   shake_gesture: ^0.1.3
   image_picker: ^0.8.9
+  flutter_local_notifications: ^16.2.0
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
   flutter_test:
