--- a/Flutter/whatz_up/pubspec.yaml
+++ b/Flutter/whatz_up/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shake_gesture: ^0.1.3
   image_picker: ^0.8.9
   flutter_local_notifications: ^16.2.0
+  app_bar_with_search_switch: ^2.0.0-dev.17
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
   flutter_test:
