--- a/Flutter/whatz_up/pubspec.yaml
+++ b/Flutter/whatz_up/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_local_notifications: ^16.2.0
   app_bar_with_search_switch: ^2.0.0-dev.17
   flutter_bloc: ^8.1.3
+  url_launcher: ^6.2.2
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
   flutter_test:
