--- a/Flutter/whatz_up/pubspec.yaml
+++ b/Flutter/whatz_up/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   app_bar_with_search_switch: ^2.0.0-dev.17
   flutter_bloc: ^8.1.3
   url_launcher: ^6.2.2
+  add_2_calendar: ^3.0.1
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
   flutter_test:
