--- a/Flutter/whatz_up/android/app/src/main/AndroidManifest.xml
+++ b/Flutter/whatz_up/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,12 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.INSERT" />
+            <data android:mimeType="vnd.android.cursor.item/event" />
+        </intent>
+    </queries>
     <application
         android:requestLegacyExternalStorage="true"
         android:label="WhatzUp"
