--- a/Flutter/whatz_up/pubspec.yaml
+++ b/Flutter/whatz_up/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   url_launcher: ^6.2.2
   add_2_calendar: ^3.0.1
+  flutter_nearby_connections: ^1.1.2
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
   flutter_test:
